--- a/fansite.css
+++ b/fansite.css
@@ -1,4 +1,8 @@
-#welcome{
-  font-size: 48px;
-  color: rgb(88, 196, 234);
+*{
+  color:maroon;
+  background-color:burlywood;
+}
+
+a:hover {
+  color: hotpink;
 }
